@@ -127,6 +127,8 @@
 #define XtCListCoreCommand       "ListCoreCommand"
 #define XtNlistDirCommand        "listDirCommand"
 #define XtCListDirCommand        "ListDirCommand"
+#define XtNuncompressCommand     "uncompressCommand"
+#define XtCUncompressCommand     "UncompressCommand"
 #define XtNwwwPage               "wwwPage"
 #define XtCWWWPage               "WWWPage"
 #define XtNwwwCommand            "wwwCommand"
@@ -268,6 +270,7 @@ struct AppData {
     String  list_source_command;
     String  list_core_command;
     String  list_dir_command;
+    String  uncompress_command;
     String  www_page;
     String  www_command;
     Boolean show_invocation;
